[tool.poetry]
name = "torch_quick_datasets"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["yohan-pg <pg.yohan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
